0.16.4
	bugfix: display VS/RS config block in RS pool view
	bugfix: fix a minor, but long-standing tabindex issue in forms
	update: enable user search by real name
	update: allow empty names for IPv4 networks
0.16.3 2008-10-02
	new feature: tell line number for lexical and syntax errors
	new feature: CodePress editor enables line numbers and syntax
		highlightling for RackCode editing
	new feature: one more input format for RS manager
	new feature: standalone RackCode report with warnings
	new feature: unified IPv4 address tree
	bugfix: tags are now properly displayed for users
	bugfix: the JavaScript error isn't generated any more (fix by Aaron)
	bugfix: tag tree is now always correctly sorted
	bugfix: fix a typo in NAT rules displaying code (pointed out by Piotr Nowacki)
	bugfix: error message was broken in the installer (reported by Thomas Thep)
	bugfix: IPv4 network check sometimes failed to detect duplicate networks
	bugfix: lexical scanner could mistakenly fail in some rare cases
	bugfix: drop DB index mistakenly introduced in 0.16.1
0.16.2 2008-08-21
	bugfix: IP address picker was broken
	bugfix: more message processing fixes
	bugfix: work around some NET-SNMP builds (reported by Walery Wysotsky)
	bugfix: some characters in password could break user access
	bugfix: pre-assigned tags didn't work for racks
	bugfix: tag roller could produce incorrect tag chains sometimes
	new feature: "router" addresses allocations
	new feature: support for local extensions and reports
	new feature: LDAP username to UID mapping by Walery Wysotsky
	new feature: extended IPv4 view mode (enabled by default)
	new feature: tag roller now processes objects in racks too
	new feature: start cutting off excessively long strings on the generated pages
	update: 3 more switches in SNMP code by Walery Wysotsky
	update: added a missing DB index (Aaron Dummer's advice)
	update: "slbconfig" gateway has been replaced by "sendfile"
	update: more detailed tag report